--- a/SubtitleAutomatorGradle/subtitle-ui/src/main/resources/com/dragoonart/subtitle/finder/ui/MainPanel.fxml
+++ b/SubtitleAutomatorGradle/subtitle-ui/src/main/resources/com/dragoonart/subtitle/finder/ui/MainPanel.fxml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.CharmListView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
 
 <TilePane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dragoonart.subtitle.finder.ui.controllers.MainPanelController">
    <children>
+      <SplitPane dividerPositions="0.09398496240601503" focusTraversable="false" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Pane prefHeight="81.0" prefWidth="640.0">
+                     <children>
+                        <ChoiceBox fx:id="foldersList" layoutX="25.0" layoutY="25.0" prefHeight="28.0" prefWidth="315.0" />
+                        <Button fx:id="addFolder" layoutX="363.0" layoutY="25.0" mnemonicParsing="false" onAction="#addFolderLocation" text="Add Folder" />
+                     </children>
+                  </Pane>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <CharmListView fx:id="videosList" prefHeight="723.0" prefWidth="640.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
       <BorderPane prefHeight="817.0" prefWidth="640.0">
          <center>
             <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
          </center>
-         <top>
-            <Pane prefHeight="81.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ChoiceBox fx:id="foldersList" layoutX="25.0" layoutY="25.0" prefHeight="28.0" prefWidth="315.0" />
-                  <Button fx:id="addFolder" layoutX="363.0" layoutY="25.0" mnemonicParsing="false" onAction="#addFolderLocation" text="Add Folder" />
-               </children>
-            </Pane>
-         </top>
       </BorderPane>
-      <Pane prefHeight="200.0" prefWidth="200.0" />
    </children>
 </TilePane>
