--- a/SubtitleAutomatorGradle/subtitle-ui/src/main/resources/com/dragoonart/subtitle/finder/ui/MainPanel.fxml
+++ b/SubtitleAutomatorGradle/subtitle-ui/src/main/resources/com/dragoonart/subtitle/finder/ui/MainPanel.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.text.Text?>
 
 <TilePane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dragoonart.subtitle.finder.ui.controllers.MainPanelController">
    <children>
@@ -31,8 +32,21 @@
         </items>
       </SplitPane>
       <BorderPane prefHeight="817.0" prefWidth="640.0">
+         <top>
+            <Pane prefHeight="79.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Text fx:id="movieName" disable="true" layoutX="14.0" layoutY="43.0" text="Nothing" wrappingWidth="212.0" />
+                  <Text fx:id="Year" disable="true" layoutX="231.0" layoutY="43.0" text="Year" />
+                  <Text fx:id="Resolution" disable="true" layoutX="292.0" layoutY="43.0" text="Resolution" wrappingWidth="70.0" />
+                  <Text fx:id="Release" disable="true" layoutX="387.0" layoutY="43.0" text="Release" wrappingWidth="55.0" />     
+               </children>
+            </Pane>
+         </top>
          <center>
-            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <CharmListView fx:id="subtitlesList" layoutX="15.0" prefHeight="400.0" prefWidth="625.0" />
+               </children></Pane>
          </center>
       </BorderPane>
    </children>
