--- a/SubtitleAutomatorGradle/subtitle-ui/src/main/resources/com/dragoonart/subtitle/finder/ui/MainPanel.fxml
+++ b/SubtitleAutomatorGradle/subtitle-ui/src/main/resources/com/dragoonart/subtitle/finder/ui/MainPanel.fxml
@@ -2,6 +2,7 @@
 
 <?import com.gluonhq.charm.glisten.control.CharmListView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,12 +15,13 @@
    <children>
       <SplitPane dividerPositions="0.13114754098360656" focusTraversable="false" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="74.0" prefWidth="638.0">
                <children>
                   <Pane prefHeight="81.0" prefWidth="640.0">
                      <children>
                         <ChoiceBox fx:id="foldersList" layoutX="79.0" layoutY="25.0" prefHeight="28.0" prefWidth="315.0" />
-                        <Button fx:id="addFolder" layoutX="417.0" layoutY="23.0" mnemonicParsing="false" onAction="#addFolderLocation" text="Add Folder" />
+                        <Button fx:id="addFolder" layoutX="417.0" layoutY="23.0" mnemonicParsing="false" onAction="#addFolderLocation" text="Добави папка" />
+                        <CheckBox fx:id="showAllbtn" layoutX="79.0" layoutY="54.0" mnemonicParsing="false" onAction="#filterVideos" text="Покажи всички видеа" />
                      </children>
                   </Pane>
                </children>
@@ -35,10 +37,11 @@
          <top>
             <Pane prefHeight="79.0" prefWidth="640.0" BorderPane.alignment="CENTER">
                <children>
-                  <Text fx:id="movieName" disable="true" layoutX="14.0" layoutY="43.0" text="Nothing" wrappingWidth="212.0" />
-                  <Text fx:id="Year" disable="true" layoutX="231.0" layoutY="43.0" text="Year" />
-                  <Text fx:id="Resolution" disable="true" layoutX="292.0" layoutY="43.0" text="Resolution" wrappingWidth="70.0" />
-                  <Text fx:id="Release" disable="true" layoutX="387.0" layoutY="43.0" text="Release" wrappingWidth="55.0" />     
+                  <Text fx:id="movieName" disable="true" layoutX="112.0" layoutY="40.0" text="Nothing" wrappingWidth="130.0" />
+                  <Text fx:id="Year" disable="true" layoutX="297.0" layoutY="42.0" text="Година" />
+                  <Text fx:id="Resolution" disable="true" layoutX="362.0" layoutY="41.0" text="Резолюция" wrappingWidth="78.0" />
+                  <Text fx:id="Release" disable="true" layoutX="455.0" layoutY="43.0" text="Релииз" wrappingWidth="55.0" />
+                  <Button fx:id="searchBtn" layoutX="25.0" layoutY="27.0" mnemonicParsing="false" onAction="#searchForSubs" text="Търси" />     
                </children>
             </Pane>
          </top>
